# libextractor-mini

./: .gitignore  AUTHORS  INSTALL  Makefile.am  README  autogen.sh  configure.in  libextractor_mini.pc.in
debian/: changelog  control  copyright  libextractor-mini-dev.install  libextractor-mini-plugin-epub.install  libextractor-mini-plugin-fb2.install  libextractor-mini-plugin-mp3.install  libextractor-mini-plugin-ogg.install  libextractor-mini-plugin-pdf.install  libextractor-mini-plugin-rtf.install  libextractor-mini-plugins.install  rules
src/: CMakeLists.txt  Makefile.am  config.h.in  extractor_fb2.c  extractor_ogg.c  fb2plug3.cpp
src/lib/: Makefile.am  extractor-mini.h  libextractor.c
src/mp3/: Makefile.am  extractor_mp3.c  tag_id3.c  tag_id3.h
src/plugins/epub/: Makefile.am  extractor_epub.c
src/plugins/fb2/: Makefile.am  extractor_fb2.c
src/plugins/mp3/: Makefile.am  tag_id3.c  tag_id3.h  utf8.c
src/plugins/ogg/: Makefile.am  vorbis.c
src/plugins/pdf/: Makefile.am  extractor_pdf.c
src/plugins/rtf/: Makefile.am  extractor_rtf.c
