AC_INIT(configure.in)

AM_CONFIG_HEADER(src/config.h)
AM_INIT_AUTOMAKE(libextractor_oi_extras, 0.1)

AC_PROG_CC
AM_PROG_LIBTOOL

PKG_PROG_PKG_CONFIG

PKG_CHECK_MODULES(EXTRACT, [libextractor-mini])
PKG_CHECK_MODULES(LIBZIP, [libzip])
PKG_CHECK_MODULES(ID3TAG, [id3tag])
PKG_CHECK_MODULES([GLIB], [glib-2.0 >= 2.6],,
      [AC_MSG_ERROR([glib-2.6 is required])])

AM_WITH_EXPAT

AC_OUTPUT(Makefile src/Makefile src/mp3/Makefile)
